exports[`test the manage button handling an onclick event 1`] = `
<div
  className="gCyDJO">
  <img
    aria-hidden="true"
    className="hLowPL"
    icon="" />
  <div
    className="fSTmXs" />
  <div
    className="fwOPcr">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO is inactive"
        className="iGaMkb"
        role="img" />
      <div
        aria-label="Local SEO is inactive"
        className="pfOfD"
        role="img" />
      <div
        aria-label="Video SEO is active"
        className="cQWrFq"
        role="img" />
      <div
        aria-label="News SEO is inactive"
        className="favXdg"
        role="img" />
      <div
        aria-label="WooCommerce SEO is active"
        className="bEJBwK"
        role="img" />
      <div
        aria-label="Local SEO for Woo is inactive"
        className="dRReah"
        role="img" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</div>
`;

exports[`test the manage button handling an onclick event 2`] = `
<div
  className="gCyDJO">
  <img
    aria-hidden="true"
    className="hLowPL"
    icon="" />
  <div
    className="fSTmXs" />
  <div
    className="fwOPcr">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO is inactive"
        className="iGaMkb"
        role="img" />
      <div
        aria-label="Local SEO is inactive"
        className="pfOfD"
        role="img" />
      <div
        aria-label="Video SEO is active"
        className="cQWrFq"
        role="img" />
      <div
        aria-label="News SEO is inactive"
        className="favXdg"
        role="img" />
      <div
        aria-label="WooCommerce SEO is active"
        className="bEJBwK"
        role="img" />
      <div
        aria-label="Local SEO for Woo is inactive"
        className="dRReah"
        role="img" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</div>
`;

exports[`test the site component matches the snapshot 1`] = `
<div
  className="gCyDJO">
  <img
    aria-hidden="true"
    className="hLowPL"
    icon="" />
  <div
    className="fSTmXs" />
  <div
    className="fwOPcr">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO is inactive"
        className="iGaMkb"
        role="img" />
      <div
        aria-label="Local SEO is inactive"
        className="pfOfD"
        role="img" />
      <div
        aria-label="Video SEO is active"
        className="cQWrFq"
        role="img" />
      <div
        aria-label="News SEO is inactive"
        className="favXdg"
        role="img" />
      <div
        aria-label="WooCommerce SEO is active"
        className="bEJBwK"
        role="img" />
      <div
        aria-label="Local SEO for Woo is inactive"
        className="dRReah"
        role="img" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={undefined}
    type="button">
    Manage
  </button>
</div>
`;
